[package]
name = "distantly-smooth-fluid"
version = "0.1.0"
authors = ["khskarl"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.14"
wasm-bindgen = "0.2.37"
gladki-sph = { path = "../gladki-sph" }

# [dependencies.web-sys]
# version = "0.3.14"
# features = [
#   'Document',
#   'Element',
#   'HtmlCanvasElement',
#   'WebGlBuffer',
#   'WebGlRenderingContext',
#   'WebGlProgram',
#   'WebGlShader',
#   'Window',
# ]
